--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey = devsling:test
+sonar.projectKey = test:mediaStream
 # this is the name displayed in the SonarQube UI 
-sonar.projectName =test
+sonar.projectName =mediaStream
 sonar.projectVersion = 1.0
 sonar.language =  java 
 sonar.sources=src/main/
