--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name = DEVSLING
+spring.application.name = test
 server.port = 8080
 app.version = V1.0
 spring.profiles.active = ${profile:dev}
